@@ -9,6 +9,12 @@ class TestScriptaculousHelper(TestCase):
         self.assertEqual("new Effect.Fade('fademe',{duration:4.0});", visual_effect('fade', "fademe", duration=4.0))
         self.assertEqual("new Effect.Shake(element,{});", visual_effect('shake'))
         self.assertEqual("new Effect.DropOut('dropme',{queue:'end'});", visual_effect('drop_out', 'dropme',queue='end'))
+        self.assertEqual("new Effect.DropOut('dropme',{queue:{scope:'test',limit:2,position:'end'}});",  
+            visual_effect('drop_out', 'dropme', queue=dict(position="end",scope="test", limit=2)))
+        self.assertEqual("new Effect.DropOut('dropme',{queue:{scope:'list',limit:2}});",
+            visual_effect('drop_out', 'dropme', queue=dict(scope='list',limit=2)))
+        self.assertEqual("new Effect.DropOut('dropme',{queue:{scope:'test',limit:2,position:'end'}});",  
+            visual_effect('drop_out', 'dropme', queue=dict(position='end',scope='test',limit=2)))
     
     def test_toggle_effects(self):
         self.assertEqual("Effect.toggle('posts','appear',{});", visual_effect("toggle_appear", "posts"))
